--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,10 @@
         "xtend": ">= 3.0.0",
         "sqlite3": ">= 2.2.4",
         "request": ">= 2.39.0",
-        "plotly": ">= 0.2.13"
+        "plotly": ">= 0.2.13",
+        "tenacious-http": ">= 0.1.3",
+        "underscore": ">= 1.6.0",
+        "mongojs": ">= 0.13.1"
     },
     "main": "server.js",
     "private": true
