--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,16 @@
         "npm": ">= 1.0.0"
     },
     "dependencies": {
-        "xtend": ">= 3.0.0",
         "sqlite3": ">= 2.2.4",
         "request": ">= 2.39.0",
         "plotly": ">= 0.2.13",
-        "tenacious-http": ">= 0.1.3",
+        "eventsource": ">= 0.1.2",
         "underscore": ">= 1.6.0",
-        "mongojs": ">= 0.13.1"
+        "mongojs": ">= 0.13.1",
+        "express": "4.8.5",
+        "morgan": "1.2.3",
+        "figlet":"1.1.0",
+        "jade":"1.5.0"
     },
     "main": "server.js",
     "private": true
