--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,7 @@
         "npm": ">= 1.0.0"
     },
     "dependencies": {
-        "request": ">= 2.39.0",
-        "plotly": ">= 0.2.13",
-        "eventsource": ">= 0.1.2",
+        "body-parser": ">=1.12.0",
         "underscore": ">= 1.6.0",
         "mongojs": ">= 0.13.1",
         "express": "4.8.5",
@@ -16,6 +14,6 @@
         "figlet":"1.1.0",
         "jade":"1.5.0"
     },
-    "main": "server.js",
+    "main": "app.js",
     "private": true
 }
